--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,9 +1,20 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Home Page</title>
-    </head>
-    <body>
-        <h1>Welcome to the Home Page</h1>
-    </body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<header class="masthead bg-index text-white text-center
+           py-4">
+  <div class="container d-flex align-items-center flex-
+  column pt-2">
+    <h2>Game Swap</h2>
+    <p>Ditch the digital, and get Physical</p>
+  </div>
+</header>
+<div class="p-3">
+  <div class="container">
+    <div class="row mt-3">
+      <div class="col mx-auto text-center mb-3">
+        <h4>Welcome to the best movie store!!</h4>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock content %}
