fixed navbar added custom logo

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,20 +1,12 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
 {% block content %}
-<header class="masthead bg-index text-white text-center
-           py-4">
-  <div class="container d-flex align-items-center flex-
-  column pt-2">
-    <h2>Game Swap</h2>
-    <p>Ditch the digital, and get Physical</p>
-  </div>
+<header class="hero text-center text-black">
+  <h1 class="h2 fw-semibold mb-2">Game Swap</h1>
+  <p class="tagline mb-0">Ditch the digital, and get Physical</p>
 </header>
-<div class="p-3">
-  <div class="container">
-    <div class="row mt-3">
-      <div class="col mx-auto text-center mb-3">
-        <h4>Game stop who?</h4>
-      </div>
-    </div>
-  </div>
-</div>
-{% endblock content %}
+
+<section class="container py-5">
+  <h2 class="text-center">Game stop who?</h2>
+</section>
+{% endblock %}
